--- a/ClubCloud.Service/ISAPI/ClubCloud.Service/web.config
+++ b/ClubCloud.Service/ISAPI/ClubCloud.Service/web.config
@@ -11,7 +11,7 @@
         <add name="HttpPostLocalhost" />
       </protocols>
     </webServices>
-    <customErrors mode="On"/>
+    <customErrors mode="Off"/>
   </system.web>
   <system.webServer>
     <security>
@@ -28,11 +28,11 @@
     </security>
   </system.webServer>
   <system.serviceModel>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
     <behaviors>
       <serviceBehaviors>
         <behavior name="showFaults">
           <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceMetadata httpGetEnabled="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
