--- a/ClubCloud.Service/WebClients/ClubCloud.Service/client.config
+++ b/ClubCloud.Service/WebClients/ClubCloud.Service/client.config
@@ -3,10 +3,23 @@
   <system.serviceModel>
     <client>
       <endpoint
+        name="http" 
+        address="" 
+        binding="customBinding" 
+        bindingConfiguration="ClubCloudBinding"
+        contract="ClubCloud.Service.IClubCloudApplicationService" />
+      <endpoint 
+        name="https"
+        address="" 
+        binding="customBinding" 
+        bindingConfiguration="ClubCloudSecureBinding"
+        contract="ClubCloud.Service.IClubCloudWCFService" />
+      <!--
+      <endpoint
         name="http"
-        contract="$SharePoint.Type.23c6e4c4-d8d7-4bef-8d11-420c88bbefc2.FullName$"
+        contract="ClubCloud.Service.IClubCloudWCFService"
         binding="customBinding"
-        bindingConfiguration="CustomHttpBinding" />
+        bindingConfiguration="CustomHttpBinding" />-->
     </client>
     <behaviors>
       <endpointBehaviors>
@@ -17,6 +30,44 @@
     </behaviors>    
     <bindings>
       <customBinding>
+        <binding name="ClubCloudBinding"
+            maxReceivedMessageSize="2147483647"
+            maxBufferSize="2147483647"
+            sendTimeout="00:02:00">
+        <security
+            authenticationMode="IssuedTokenOverTransport"
+            allowInsecureTransport="true" />
+          <textMessageEncoding>
+            <readerQuotas
+              maxStringContentLength="1073741824"
+              maxArrayLength="1073741824"
+              maxBytesPerRead="1073741824" />
+          </textMessageEncoding>          
+          <httpTransport
+            maxReceivedMessageSize="2162688"
+            authenticationScheme="Anonymous"
+            useDefaultWebProxy="false"
+            transferMode="Streamed" />
+        </binding>
+        <binding name="ClubCloudSecureBinding"
+            maxReceivedMessageSize="2147483647"
+            maxBufferSize="2147483647"
+            sendTimeout="00:02:00">
+        <security
+            authenticationMode="IssuedTokenOverTransport" />
+          <textMessageEncoding>
+            <readerQuotas
+              maxStringContentLength="1073741824"
+              maxArrayLength="1073741824"
+              maxBytesPerRead="1073741824" />
+          </textMessageEncoding>
+          <httpsTransport
+            maxReceivedMessageSize="2162688"
+            authenticationScheme="Anonymous"
+            useDefaultWebProxy="false"
+            transferMode="Streamed" />
+        </binding>
+        <!--
         <binding
           name="CustomHttpBinding" maxBufferPoolSize="1073741824" maxReceivedMessageSize="1073741824" sendTimeout="0:10:00">
           <security
@@ -28,11 +79,6 @@
               maxArrayLength="1073741824"
               maxBytesPerRead="1073741824" />
           </textMessageEncoding>
-          <!--<binaryMessageEncoding>
-            <readerQuotas
-              maxStringContentLength="1048576"
-              maxArrayLength="2097152" />
-          </binaryMessageEncoding>-->
           <httpTransport
             maxBufferPoolSize="1073741824"
             maxReceivedMessageSize="1073741824"
@@ -40,7 +86,13 @@
             authenticationScheme="Anonymous"
             useDefaultWebProxy="false"/>
         </binding>
+        -->
       </customBinding>
     </bindings>
   </system.serviceModel>
+  <system.net>
+    <connectionManagement>
+      <add address="*" maxconnection="10000" />
+    </connectionManagement>
+  </system.net>
 </configuration>
