--- a/ClubCloud.Service/WebServices/ClubCloud.Service/web.config
+++ b/ClubCloud.Service/WebServices/ClubCloud.Service/web.config
@@ -3,39 +3,41 @@
   <system.serviceModel>
     <services>
       <service
-        name="$SharePoint.Type.e00d1eca-a977-4ba9-a357-5fd35dfc0f63.FullName$" 
+        name="ClubCloud.Service.ClubCloudApplicationService" 
         behaviorConfiguration="ClaimsAware">
         <endpoint
           address=""
           name="http"
-          contract="$SharePoint.Type.23c6e4c4-d8d7-4bef-8d11-420c88bbefc2.FullName$"
+          contract="ClubCloud.Service.IClubCloudApplicationService"
           binding="customBinding"
-          bindingConfiguration="CustomHttpBinding"
+          bindingConfiguration="ClubCloudBinding"
           />
+        <endpoint
+          address=""
+          name="https"
+          contract="ClubCloud.Service.IClubCloudApplicationService"
+          binding="customBinding"
+          bindingConfiguration="ClubCloudSecureBinding"
+          />  
       </service>
     </services>
     <behaviors>
       <serviceBehaviors>
         <behavior name="ClaimsAware" >
-          <serviceMetadata httpGetEnabled="true" />
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="true"/>
           <serviceThrottling maxConcurrentCalls="65536" maxConcurrentSessions="65536" maxConcurrentInstances="65536" />
-          <dataContractSerializer maxItemsInObjectGraph="6000000"/>          
+          <dataContractSerializer maxItemsInObjectGraph="6000000"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>    
     <bindings>
       <customBinding>
         <binding
-          name="CustomHttpBinding" maxBufferPoolSize="1073741824" maxReceivedMessageSize="1073741824">
+          name="ClubCloudBinding"  maxBufferPoolSize="1073741824" maxReceivedMessageSize="1073741824" >
           <security
             authenticationMode="IssuedTokenOverTransport"
-            allowInsecureTransport="true" />
-          <!--<binaryMessageEncoding>
-            <readerQuotas
-              maxStringContentLength="1048576"
-              maxArrayLength="2097152" />
-          </binaryMessageEncoding>-->
+            allowInsecureTransport="true"  />
           <textMessageEncoding>
             <readerQuotas
               maxStringContentLength="1073741824"
@@ -44,6 +46,22 @@
           </textMessageEncoding>          
           <httpTransport
             maxReceivedMessageSize="2162688"
+            authenticationScheme="Anonymous"
+            useDefaultWebProxy="false"
+            transferMode="Streamed" />
+        </binding>
+        <binding
+          name="ClubCloudSecureBinding"  maxBufferPoolSize="1073741824" maxReceivedMessageSize="1073741824" >
+          <security
+            authenticationMode="IssuedTokenOverTransport" />
+          <textMessageEncoding>
+            <readerQuotas
+              maxStringContentLength="1073741824"
+              maxArrayLength="1073741824"
+              maxBytesPerRead="1073741824" />
+          </textMessageEncoding>
+          <httpsTransport
+          maxReceivedMessageSize="2162688"
             authenticationScheme="Anonymous"
             useDefaultWebProxy="false"
             transferMode="Streamed" />
