--- a/ClubCloud.Claims/IDENTITYMODEL/ZIMBRA/web.config
+++ b/ClubCloud.Claims/IDENTITYMODEL/ZIMBRA/web.config
@@ -1,9 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.web>
+    <customErrors mode="Off"/>
     <authorization>
       <allow users="*" />
     </authorization>
     <identity impersonate="true" />
   </system.web>
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="default.aspx" />
+      </files>
+    </defaultDocument>
+  </system.webServer>
 </configuration>
