--- a/ClubCloud.KNLTB/ClubCloud.KNLTB.csproj
+++ b/ClubCloud.KNLTB/ClubCloud.KNLTB.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
@@ -74,6 +75,8 @@
     <Compile Include="Client\ZoekPersoon.cs" />
     <Compile Include="KNLTBService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\AsyncLock.cs" />
+    <Compile Include="Security\KNLTBContainer.cs" />
     <Compile Include="Service\KNLTBBinding.cs" />
     <Compile Include="Service\KNLTBEndpointAddress.cs" />
     <Compile Include="Service\KNLTBHeaderContext.cs" />
