--- a/ClubCloud.Claims/IDENTITYMODEL/ZIMBRA/web.config
+++ b/ClubCloud.Claims/IDENTITYMODEL/ZIMBRA/web.config
@@ -8,7 +8,7 @@
     <identity impersonate="true" />
   </system.web>
   <system.webServer>
-    <defaultDocument>
+    <defaultDocument enabled="true">
       <files>
         <clear />
         <add value="default.aspx" />
