--- a/ClubCloud.Claims/ClubCloud.Provider.csproj
+++ b/ClubCloud.Claims/ClubCloud.Provider.csproj
@@ -172,6 +172,7 @@
     <Compile Include="ZimbraUserSettingsProvider.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config" />
     <None Include="Features\Zimbra UserSettings\Zimbra UserSettings.feature">
       <FeatureId>{48f6970d-4eef-4245-b89f-3ee2a9c8bf9d}</FeatureId>
     </None>
@@ -187,6 +188,7 @@
     <None Include="IDENTITYMODEL\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{8056646a-74b2-4b0c-97b5-1525d272ab5f}</SharePointProjectItemId>
     </None>
+    <None Include="IDENTITYMODEL\ZIMBRA\clouds.master" />
     <None Include="IDENTITYMODEL\ZIMBRA\web.config" />
     <None Include="Package\Package.package">
       <PackageId>{feeca0b7-26ac-459f-83de-82e1943f195c}</PackageId>
@@ -249,6 +251,9 @@
       <DependentUpon>Zimbra Provider.feature</DependentUpon>
     </Content>
     <Content Include="IDENTITYMODEL\ZIMBRA\Authenticate.aspx" />
+    <Content Include="IDENTITYMODEL\ZIMBRA\cloud\cloud10.png" />
+    <Content Include="IDENTITYMODEL\ZIMBRA\cloud\Detector.js" />
+    <Content Include="IDENTITYMODEL\ZIMBRA\cloud\three.min.js" />
     <Content Include="IDENTITYMODEL\ZIMBRA\default.aspx" />
     <Content Include="Webparts\Add_User\Add_User.ascx">
       <Generator>SharePointWebPartCodeGenerator</Generator>
