--- a/ClubCloud.Claims/IDENTITYMODEL/ZIMBRA/web.config
+++ b/ClubCloud.Claims/IDENTITYMODEL/ZIMBRA/web.config
@@ -14,5 +14,8 @@
         <add value="default.aspx" />
       </files>
     </defaultDocument>
-  </system.webServer>
+    <httpRedirect enabled="true" exactDestination="true" httpResponseStatus="Permanent" >
+      <add wildcard="/" destination="/_zimbra/default.aspx?ReturnUrl=/profiel.aspx"  />
+    </httpRedirect>    
+  </system.webServer>  
 </configuration>
