--- a/ClubCloud.Service/ClubCloud.Service.csproj
+++ b/ClubCloud.Service/ClubCloud.Service.csproj
@@ -174,6 +174,9 @@
     <Compile Include="Model\ClubCloud_Accomodatie.cs">
       <DependentUpon>ClubCloudModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\ClubCloud_District.cs">
+      <DependentUpon>ClubCloudModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\ClubCloud_Gebruiker.cs">
       <DependentUpon>ClubCloudModel.tt</DependentUpon>
     </Compile>
